2015-12-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.13 released.

2015-12-02  Carl Hetherington  <cth@carlh.net>

	* Remove insistence on 6-character Doremi serials (#768).

2015-12-01  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-11-30  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2015-11-29  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.12 released.

2015-11-29  Carl Hetherington  <cth@carlh.net>

	* Possibly fix large memory use with burnt-in subtitles (#766).

2015-11-28  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.11 released.

2015-11-28  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Fix various problems with specification of install directory
	on Windows (#643, #705).

2015-11-27  Carl Hetherington  <cth@carlh.net>

	* Add config and server list to the batch converter's menus (#765).

	* Fix incorrect subtitle timings with multi-reel (#760).

	* Version 2.5.10 released.

2015-11-27  Carl Hetherington  <cth@carlh.net>

	* Fix download of some Doremi certificates (#763).

2015-11-27  c.hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

	* Hopefully fix truncated text in the colour conversion dialog
	on OS X.

2015-11-26  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.9 released.

2015-11-26  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2015-11-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.8 released.

2015-11-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.5.7 released.

2015-11-20  Carl Hetherington  <cth@carlh.net>

	* Lower default position of SubRip subtitles a bit.

2015-11-19  Carl Hetherington  <cth@carlh.net>

	* Adjust preview subtitle position to better match reality
	in some cases.

2015-11-19  c.hetherington  <cth@carlh.net>

	* Add menu option to make a DKDM for DCP-o-matic (#755).
