@@ -21,5 +21,5 @@
 #include <boost/function.hpp>
 #include <boost/filesystem.hpp>
 
-boost::optional<std::string> get_from_zip_url (std::string url, std::string file, boost::function<void (boost::filesystem::path)> load);
+boost::optional<std::string> get_from_zip_url (std::string url, std::string file, bool pasv, boost::function<void (boost::filesystem::path)> load);
 std::list<std::string> ftp_ls (std::string dir, bool pasv = true);
